--- a/book_studier.html
+++ b/book_studier.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book studier Produkt liste</title>
+    <link rel="stylesheet" href="styletile.css">
 </head>
 
 <body>
