Produkt side, tilføjet css

--- a/produkt_side.html
+++ b/produkt_side.html
@@ -3,33 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styletile.css" />
+    <link rel="stylesheet" href="produkt_side.css" />
     <title>Produkt side</title>
   </head>
   <body>
     <h1>Canon 10</h1>
+    <div class="info">
+      <h2>Info</h2>
+      <p>
+        H1 Canon 10 er god til at fotografere fugle. Den Fanger dem altid lige
+        når de letter. Husk udstyret er dit ansvar.
+      </p>
+    </div>
+    <div class="blue_container">
+      <h1>Det her får du med</h1>
+      <img src="" alt="" />
+      <ul>
+        <li>1 x Kamera</li>
+        <li>1 x SD Card</li>
+        <li>1 x Mikrofon</li>
+        <li>1 x Shotgun Mikrofon</li>
+        <li>1 x Oplader</li>
+        <li>1 x Fjernbetjening</li>
+      </ul>
+    </div>
+    <div class="pink_container">
+      <h2>Har du tænkt på?</h2>
+    </div>
+    <h2>Tripod</h2>
     <img src="" alt="" />
-    <h2>Info</h2>
-    <p>
-      H1 Canon 10 er god til at fotografere fugle. Den Fanger dem altid lige når
-      de letter. Husk udstyret er dit ansvar.
-    </p>
-    <h2>Det her får du med</h2>
+    <h2>Mikrofon</h2>
     <img src="" alt="" />
-    <ul>
-      <li>1 x Kamera</li>
-      <li>1 x SD Card</li>
-      <li>1 x Mikrofon</li>
-      <li>1 x Shotgun Mikrofon</li>
-      <li>1 x Oplader</li>
-      <li>1 x Fjernbetjening</li>
-    </ul>
-    <h2>Har du tænkt på?</h2>
-    <h3>Tripod</h3>
+    <h2>Optager</h2>
     <img src="" alt="" />
-    <h3>Mikrofon</h3>
-    <img src="" alt="" />
-    <h3>Optager</h3>
-    <img src="" alt="" />
-    <h2>test</h2>
   </body>
 </html>
