--- a/produkt_side.html
+++ b/produkt_side.html
@@ -8,6 +8,7 @@
     <title>Produkt side</title>
   </head>
   <body>
+    <img src="produkt_fotos/Canon .webp" alt="Et billede af et Canon kamera" />
     <h1>Canon 10</h1>
     <div class="info">
       <h2>Info</h2>
@@ -18,7 +19,10 @@
     </div>
     <div class="blue_container">
       <h1>Det her får du med</h1>
-      <img src="" alt="" />
+      <img
+        src="produkt_fotos/kamera_udstyr.webp"
+        alt="Et billede, af hvad man får du med af kamera udstyr"
+      />
       <ul>
         <li>1 x Kamera</li>
         <li>1 x SD Card</li>
@@ -31,11 +35,14 @@
     <div class="pink_container">
       <h2>Har du tænkt på?</h2>
     </div>
-    <h2>Tripod</h2>
-    <img src="" alt="" />
+    <h2>VR</h2>
+    <img src="produkt_fotos/VR.webp" alt="Et billede af VR udstyr" />
     <h2>Mikrofon</h2>
-    <img src="" alt="" />
+    <img
+      src="produkt_fotos/røde_mikro.webp"
+      alt="Et billede af røde mikrofon"
+    />
     <h2>Optager</h2>
-    <img src="" alt="" />
+    <img src="produkt_fotos/sony_kamera.webp" alt="Et billede af sony kamera" />
   </body>
 </html>
