--- a/product_list.html
+++ b/product_list.html
@@ -16,8 +16,8 @@
 <body>
     <main>
 <div class="hero-container">
-<img class="herosection_img" src="produkt_fotos/fujifilm.webp" alt="herosection">
-<img class="logo" src="TSL_logo.png" alt="TSL_logo">
+<img class="herosection_img" src="produkt_fotos/produktliste_herosection2.webp" alt="herosection">
+<img class="logo" src="Logo_Tech&Story.svg" alt="TSL_logo">
 </div>
 
 
@@ -25,7 +25,7 @@
 <h1>Foto, Lyd & video</h1>
 <div class="info">
 <h2>Info</h2>
-<p>Udstyr reserveres ved henvendelse i Tech & Story Lab. Ved reservation medbring dit personlig studiekort.</p>
+<p class="info_tekst">Udstyr reserveres ved henvendelse i Tech & Story Lab. Ved reservation medbring dit personlig studiekort.</p>
 </div>
 
 <div class="produktliste_kategorier">
