produkt liste 3. opdateret

--- a/product_list.html
+++ b/product_list.html
@@ -25,7 +25,8 @@
 <h1>Foto, Lyd & video</h1>
 <div class="info">
 <h2>Info</h2>
-<p class="info_tekst">Udstyr reserveres ved henvendelse i Tech & Story Lab. Ved reservation medbring dit personlig studiekort.</p>
+<p class="info_tekst">Udstyr reserveres ved henvendelse i Tech & Story Lab. <br/>
+    Ved reservation medbring dit personlig studiekort.</p>
 </div>
 
 <div class="produktliste_kategorier">
