--- a/product_list.html
+++ b/product_list.html
@@ -22,10 +22,13 @@
 
 
     
-<h1>Foto, Lyd & video</h1>
+<h1>Foto, Lyd & Video</h1>
 <div class="info">
 <h2>Info</h2>
-<p class="info_tekst">Udstyr reserveres ved henvendelse i Tech & Story Lab. <br/>
+<p class="info_tekst">
+    Her finder du alt lige fra forskellige kameraer, objektiver og stabilisatorer til diverse tripods, mikrofoner og lysudstyr. Hvad enten du er på udkig efter grej til fx portræt- og produktbilleder, interviews eller podcasts, har vi alt, du har brug for.<br/>
+    <br/>
+    Udstyr reserveres ved henvendelse i Tech & Story Lab. <br/>
     Ved reservation medbring dit personlig studiekort.</p>
 </div>
 
