--- a/product_list.html
+++ b/product_list.html
@@ -70,5 +70,46 @@
             </div>
         </div>
     </main>
+
+
+    
+    <footer class="footer">
+        <h2>KEA - Københavns Erhvervsakademi</h2>
+        <p>Guldbergsgade 29N
+            2200 København N</p>
+        <h2>Du skal ikke bare vide.
+            Du skal kunne.</h2>
+
+        <h2>Vejledning</h2>
+        <ul>
+            <li>Studieadministrationen</li>
+            <li>Studie- og Karrierevejledning</li>
+            <li>SPS (specialpædagogisk støtte)</li>
+            <li>SU-vejledning</li>
+            <li>Praktik</li>
+        </ul>
+
+        <h2>Relevante links</h2>
+        <ul>
+            <li>KEA Webmail</li>
+            <li>KEA Bibliotek</li>
+            <li>Itslearning</li>
+            <li>Fag- og modulkatalog</li>
+            <li>Studieaktivitetsmodel</li>
+            <li>PARIS-aftalen</li>
+            <li>Ordensregler</li>
+        </ul>
+
+        <h2>Praktisk info</h2>
+        <ul>
+            <li>Cookies og privatliv</li>
+            <li>Persondatapolitik</li>
+            <li>Tilgængelighedserklæring</li>
+            <li>Find vej på KEA</li>
+        </ul>
+
+    </footer>
+
+
 </body>
 </html>
