--- a/produkt_side.html
+++ b/produkt_side.html
@@ -10,15 +10,16 @@
   <body>
     <img src="produkt_fotos/Canon .webp" alt="Et billede af et Canon kamera" />
     <h1>Canon 10</h1>
-    <div class="info">
+    <div class="info__produkt_side">
       <h2>Info</h2>
       <p>
         H1 Canon 10 er god til at fotografere fugle. Den Fanger dem altid lige
-        når de letter. Husk udstyret er dit ansvar.
+        når de letter.
       </p>
+      <p>Husk udstyret er dit ansvar.</p>
     </div>
     <div class="blue_container">
-      <h1>Det her får du med</h1>
+      <h1>Det får du med</h1>
       <img
         src="produkt_fotos/kamera_udstyr.webp"
         alt="Et billede, af hvad man får du med af kamera udstyr"
@@ -44,5 +45,6 @@
     />
     <h2>Optager</h2>
     <img src="produkt_fotos/sony_kamera.webp" alt="Et billede af sony kamera" />
+    <script src="produkt_side.js"></script>
   </body>
 </html>
