--- a/produkt_side.html
+++ b/produkt_side.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="produkt_side.css" />
     <title>Produkt side</title>
   </head>
+  <header>
+    <div class="logo">
+      <a href="index.html">
+        <img src="produkt_fotos/logo.webp" alt="logo" />
+      </a>
+    </div>
+    <nav>
+      <ul class="menu">
+        <li><a href="produkter.html">Kategori</a></li>
+        <li><a href="extension.html">Produktliste</a></li>
+        <li><a href="priser.html">Produkt</a></li>
+      </ul>
+      <div class="burger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+    </nav>
+  </header>
   <body>
     <img src="produkt_fotos/Canon .webp" alt="Et billede af et Canon kamera" />
     <h1>Canon 10</h1>
