--- a/produkt_side.html
+++ b/produkt_side.html
@@ -15,14 +15,17 @@
     </div>
     <nav>
       <ul class="menu">
-        <li><a href="produkter.html">Kategori</a></li>
-        <li><a href="extension.html">Produktliste</a></li>
-        <li><a href="priser.html">Produkt</a></li>
+        <li><a href="product_list.html">Kategori</a></li>
+        <li><a href="book_studier.html">Studier</a></li>
+        <li><a href="priser.html">Kurser</a></li>
       </ul>
       <div class="burger">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
+      </div>
+      <div class="search">
+        <img src="produkt_fotos/search.webp" alt="Billede af søgemaskine" />
       </div>
     </nav>
   </header>
