--- a/produkt_side.html
+++ b/produkt_side.html
@@ -15,9 +15,15 @@
     </div>
     <nav>
       <ul class="menu">
-        <li><a href="product_list.html">Kategori</a></li>
-        <li><a href="book_studier.html">Studier</a></li>
-        <li><a href="priser.html">Kurser</a></li>
+        <li>
+          <a href="product_list.html"><b>Kategori</b></a>
+        </li>
+        <li>
+          <a href="book_studier.html"><b>Studier</b></a>
+        </li>
+        <li>
+          <a href="priser.html"><b>Kurser</b></a>
+        </li>
       </ul>
       <div class="burger">
         <div class="line"></div>
