Fixet "har du tønkt på"

--- a/produkt_side.html
+++ b/produkt_side.html
@@ -61,18 +61,29 @@
         <li>1 x Fjernbetjening</li>
       </ul>
     </div>
-    <div class="pink_container">
-      <h2>Har du tænkt på?</h2>
+    <div class="nederst__pink_container">
+      <h4>Har du tænkt på?</h4>
     </div>
-    <h2>VR</h2>
-    <img src="produkt_fotos/VR.webp" alt="Et billede af VR udstyr" />
-    <h2>Mikrofon</h2>
-    <img
-      src="produkt_fotos/røde_mikro.webp"
-      alt="Et billede af røde mikrofon"
-    />
-    <h2>Optager</h2>
-    <img src="produkt_fotos/sony_kamera.webp" alt="Et billede af sony kamera" />
+    <div class="produkter">
+      <div class="produkt">
+        <h2>VR</h2>
+        <img
+          src="produkt_fotos/røde_mikro.webp"
+          alt="Et billede af en tripod"
+        />
+      </div>
+      <div class="produkt">
+        <h2>MIKROFON</h2>
+        <img
+          src="produkt_fotos/røde_mikro.webp"
+          alt="Et billede af en mikrofon"
+        />
+      </div>
+      <div class="produkt">
+        <h2>LYD</h2>
+        <img src="produkt_fotos/røde_mikro.webp" alt="Et billede af kamera" />
+      </div>
+    </div>
     <script src="produkt_side.js"></script>
   </body>
 </html>
