book update almost done

--- a/book_studier.html
+++ b/book_studier.html
@@ -42,7 +42,7 @@
 
                     <img class="product-list__image" src="book_side_fotos/fotostudie.png" alt="foto studio">
                 </div>
-                <h3 class="cta_book"><a
+                <h3 class="cta_book" style="text-decoration: none;"><a
                         href="https://kea-adfs.kea.dk/adfs/ls/?SAMLRequest=jZFNb4MwDIbv%2BxUo9xCS0gBRoapUTaq0SdO%2BDrtUBsyKCoHhUO3nD9pN6i7TLpYd2W%2F8Pl6tP9vGO%2BFAdWdTJv2AeWiLrqzte8penm95zNbZzYqgbVRvNqM72Ef8GJGct51CbcGdJw%2FO9WSEOCJwKCvyp8Qvj2LORUOCebttyvZlhFLmIDnGesnDJEp4rEFNI4uwCnSUV2WwT1QRlzpGDrmSPMRccygWmhdQaayWEIS6mPToAYjqE6asgoZwfqERd5YcWJcyFaiQBwmX%2BlkuTRAaqXwZyTfmvf7YVbPdCYAlczGYsnGwpgOqyVhokYwrzNPm%2Fs5MraYfOtcVXcOyCw9z%2FnC4VvhbYNoXh5kXy654%2Ba7rS6Sjb9GJWYW36KAEB%2BI%2FuFbiepnsu%2Fx9q%2BwL&RelayState=deb19f6c-6c7d-4240-8462-469bd50848fb&SigAlg=http%3A%2F%2Fwww.w3.org%2F2001%2F04%2Fxmldsig-more%23rsa-sha256&Signature=fGxEig493RdyltDlHPB0J5vArwubdclNoxVK%2F4af8BnWobOq1b5Q%2BY%2FZ%2Bs8n9OB%2B7yTgGpjN30g4Ge7cD%2B2dxzyE5SpqqvhlnmwCUDLCquHGcD1C8ckA9cm3RvavNGYaWPHPTaYkarvpuC1Q7yMd60Ut414EBh%2F4sN6P0s2iDB%2FWUf7BtGKxlw0qvGB2dvb%2FAf%2B7G54I9zhGyTg4G6ezWjpaulGQ65hJCQCTyp%2BSIs3PgptTAny%2FtTr%2B5JoY6rVONTnXRXeefiKuSvl9D5B%2BeOhzAz%2B9gMlgICzRflkPxL1Xxs5VtwG4SyB4ssZQeCV4C06y9ql5LRlBXZjFx%2FUHNQ%3D%3D">Book</a>
                 </h3>
                 <hr class="linje">
@@ -52,11 +52,8 @@
             <div class="product-list__column-2">
                 <h2 class="product-list__title">Eye Tracking Studio</h2>
                 <div class="product-list__column-2-1">
-                    <p class="product-list__beskrivelse-2">Undersøg din testpersons opmærksomhed og respons. Vi kan
-                        registrere
-                        hvor, hvordan og hvad
-                        testpersoner ser efter.</p>
-
+                    <p class="product-list__beskrivelse-2"> Undersøg din testpersons opmærksomhed og respons, samt
+                        registrere hvor, hvordan og hvad testpersoner ser efter.</p>
                     <img class="product-list__image-2" src="book_side_fotos/eye-track-baby.jpg" alt="eye-tracking">
                 </div>
                 <h3 class="cta_book"><a
@@ -86,38 +83,48 @@
 
     <footer class="footer">
         <h2>KEA - Københavns Erhvervsakademi</h2>
-        <p>Guldbergsgade 29N</p>
-        <p> 2200 København N</p>
-        <h3>Du skal ikke bare vide.
-            Du skal kunne.</h3>
+        <div class="top_kolon">
+            <p>Guldbergsgade 29N</p>
+            <p> 2200 København N</p>
+        </div>
+        <div class="top_2">
+            <h3>Du skal ikke bare vide.
+                Du skal kunne.</h3>
+        </div>
 
-        <h2>Vejledning</h2>
-        <ul>
-            <li>Studieadministrationen</li>
-            <li>Studie- og Karrierevejledning</li>
-            <li>SPS (specialpædagogisk støtte)</li>
-            <li>SU-vejledning</li>
-            <li>Praktik</li>
-        </ul>
+        <div class="kolon_1">
+            <h2>Vejledning</h2>
+            <ul>
+                <li>Studieadministrationen</li>
+                <li>Studie- og Karrierevejledning</li>
+                <li>SPS (specialpædagogisk støtte)</li>
+                <li>SU-vejledning</li>
+                <li>Praktik</li>
+            </ul>
+        </div>
 
-        <h2>Relevante links</h2>
-        <ul>
-            <li>KEA Webmail</li>
-            <li>KEA Bibliotek</li>
-            <li>Itslearning</li>
-            <li>Fag- og modulkatalog</li>
-            <li>Studieaktivitetsmodel</li>
-            <li>PARIS-aftalen</li>
-            <li>Ordensregler</li>
-        </ul>
+        <div class="kolon_2">
+            <h2>Relevante links</h2>
+            <ul>
+                <li>KEA Webmail</li>
+                <li>KEA Bibliotek</li>
+                <li>Itslearning</li>
+                <li>Fag- og modulkatalog</li>
+                <li>Studieaktivitetsmodel</li>
+                <li>PARIS-aftalen</li>
+                <li>Ordensregler</li>
+            </ul>
+        </div>
 
-        <h2>Praktisk info</h2>
-        <ul>
-            <li>Cookies og privatliv</li>
-            <li>Persondatapolitik</li>
-            <li>Tilgængelighedserklæring</li>
-            <li>Find vej på KEA</li>
-        </ul>
+        <div class="kolon_3">
+            <h2>Praktisk info</h2>
+            <ul>
+                <li>Cookies og privatliv</li>
+                <li>Persondatapolitik</li>
+                <li>Tilgængelighedserklæring</li>
+                <li>Find vej på KEA</li>
+            </ul>
+        </div>
 
     </footer>
 </body>
