--- a/product_list.html
+++ b/product_list.html
@@ -21,25 +21,29 @@
         </section>
 
         <section class="info">
+            <div>
             <h2>Info</h2>
             <p class="info_tekst">
                 Her finder du alt lige fra forskellige kameraer, objektiver og stabilisatorer til diverse tripods, mikrofoner og lysudstyr. Hvad enten du er på udkig efter grej til fx portræt- og produktbilleder, interviews eller podcasts, har vi alt, du har brug for.<br/>
                 Udstyr reserveres ved henvendelse i Tech & Story Lab. <br/>
                 Ved reservation medbring dit personlig studiekort.
             </p>
+        </div>
+            <img class="logo2" src="Logo_Tech&Story.svg" alt="TSL_logo">
         </section>
+
+        <h1>Kameraer</h1>
 
         <div id="produkt-liste-container"></div>
 
         <template id="produkt-skabelon">
             <article>
-                <h1 class="kategori-titel"></h1>
+                <div class="produkt_single_grid">
                 <h2 class="produkt-overskrift"></h2>
-                <div class="produktliste-produkt">
                     <p class="produkt-beskrivelse"></p>
-                    <img class="produkt-billede" src="" alt="">
+                    <img class="produktliste_billede" src="produkt_fotos/fujifilm.webp" alt="fujifilm">
                     <h3 class="cta">Læs mere</h3>
-                </div>
+            </div>
                 <hr class="custom-line">
             </article>
         </template>
