--- a/book_studier.html
+++ b/book_studier.html
@@ -38,7 +38,7 @@
                 <h2 class="product-list__title">Photo Studio</h2>
                 <div class="product-list__column-1-1">
                     <p class="product-list__beskrivelse">Studiet er fuldt udstyret med alt du skal bruge til at tage
-                        professionelle billeder.</p>
+                        professionelle billeder. Kom forbi.</p>
 
                     <img class="product-list__image" src="book_side_fotos/fotostudie.png" alt="foto studio">
                 </div>
@@ -52,8 +52,8 @@
             <div class="product-list__column-2">
                 <h2 class="product-list__title">Eye Tracking Studio</h2>
                 <div class="product-list__column-2-1">
-                    <p class="product-list__beskrivelse-2"> Undersøg din testpersons opmærksomhed og respons, samt
-                        registrere hvor, hvordan og hvad testpersoner ser efter.</p>
+                    <p class="product-list__beskrivelse-2"> Undersøg din testpersons opmærksomhed og respons.Se hvor de
+                        kigger hen. </p>
                     <img class="product-list__image-2" src="book_side_fotos/eye-track-baby.jpg" alt="eye-tracking">
                 </div>
                 <h3 class="cta_book"><a
