--- a/book_studier.html
+++ b/book_studier.html
@@ -17,6 +17,7 @@
     <main>
         <article class="studier">
             <img class="studier__image" src="book_side_fotos/fotostudie.png" alt="foto_studie">
+            <div class="logo"> <img class="logo" src="Logo_Tech&Story.svg" alt="TSL_logo"> </div>
             <h1 class="studier__title">Studier</h1>
         </article>
 
@@ -27,6 +28,7 @@
                     Studierne kan kun bookes 1 dag adgang. Reserver din tid i Topdesk, og kom forbi Tech & Story Lab og
                     afhent nøglen. </p>
             </div>
+            <div class="logo2"> <img class="logo" src="Logo_Tech&Story.svg" alt="TSL_logo"> </div>
 
         </article>
 
