desktop næsten done

--- a/produkt_side.html
+++ b/produkt_side.html
@@ -47,19 +47,21 @@
       <p>Husk udstyret er dit ansvar.</p>
     </div>
     <div class="blue_container">
-      <h1>Det får du med</h1>
-      <img
-        src="produkt_fotos/kamera_udstyr.webp"
-        alt="Et billede, af hvad man får du med af kamera udstyr"
-      />
-      <ul>
-        <li>1 x Kamera</li>
-        <li>1 x SD Card</li>
-        <li>1 x Mikrofon</li>
-        <li>1 x Shotgun Mikrofon</li>
-        <li>1 x Oplader</li>
-        <li>1 x Fjernbetjening</li>
-      </ul>
+      <h1>Det her får du med</h1>
+      <div class="grid_container">
+        <img
+          src="produkt_fotos/kamera_udstyr.webp"
+          alt="Et billede af kameraudstyr"
+        />
+        <ul>
+          <li>1 x Kamera</li>
+          <li>1 x SD Card</li>
+          <li>1 x Mikrofon</li>
+          <li>1 x Shotgun Mikrofon</li>
+          <li>1 x Oplader</li>
+          <li>1 x Fjernbetjening</li>
+        </ul>
+      </div>
     </div>
     <div class="nederst__pink_container">
       <h4>Har du tænkt på?</h4>
