--- a/product_list.html
+++ b/product_list.html
@@ -42,7 +42,9 @@
                 <h2 class="produkt-overskrift"></h2>
                     <p class="produkt-beskrivelse"></p>
                     <img class="produktliste_billede" src="produkt_fotos/fujifilm.webp" alt="fujifilm">
-                    <h3 class="cta">Læs mere</h3>
+                    <h3 class="cta">
+                        <a style="text-decoration: none; color: white;" href="produkt_side.html">Læs mere</a>
+                      </h3>
             </div>
                 <hr class="custom-line">
             </article>
