--- a/product_list.html
+++ b/product_list.html
@@ -11,6 +11,34 @@
     <title>Produkt Liste</title>
 </head>
 <body>
+    <header>
+        <div class="logo">
+          <a href="index.html">
+            
+          </a>
+        </div>
+        <nav>
+          <ul class="menu">
+            <li>
+              <a href="product_list.html"><b>Kategori</b></a>
+            </li>
+            <li>
+              <a href="book_studier.html"><b>Studier</b></a>
+            </li>
+            <li>
+              <a href="priser.html"><b>Kurser</b></a>
+            </li>
+          </ul>
+          <div class="burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
+          <div class="search">
+            <img src="produkt_fotos/search.webp" alt="Billede af søgemaskine" />
+          </div>
+        </nav>
+      </header>
     <main>
         <section class="toppen">
             <div class="hero-container">
