--- a/index.html
+++ b/index.html
@@ -4,112 +4,179 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styletile.css" />
+    <link rel="stylesheet" href="frontpage.css" />
     <title>Home</title>
   </head>
   <body>
     <header></header>
     <main>
-      <section class="hero_section">
-        <img src="" alt="" class="hero_section__img" />
-        <div class="hero_section__infobox">
-          <h2>åbningstider</h2>
-          <p>
-            Man-Torsdag
-            <span>9-16</span>
-          </p>
-          <p>
-            Fredag
-            <span>9-15</span>
-          </p>
-          <p>Tlf: 46 46 04 42</p>
+      <article class="img__container">
+        <img
+          class="hero__img"
+          src="tech-story-lab-3-bred.jpg.webp"
+          alt="hero image, kvinde der tager billeder."
+        />
+
+        <div class="text_overlay">
+          <h3>Åbningstider</h3>
+          <ul class="opening_hours">
+            <li>Mandag - Torsdag 9-15</li>
+            <li>Fredag 9-15</li>
+            <li>tlf: 46 46 04 42</li>
+          </ul>
         </div>
-        <p>Husk studiekort</p>
-      </section>
-      <section class="info">
+      </article>
+      <div class="info__headline">
         <h1>Velkommen til Tech & Story Lab</h1>
+      </div>
+      <section class="info_index">
         <p>
           Tech & Story Lab er et lab med fokus på ny teknologi for KEAs
           studerende, undervisere og øvrige ansatte.
+          <br />
+          Her kan du eksperimentere med ny teknologi og låne et stort udvalg af
+          udstyr og få kyndig vejledning i brugen af det.
         </p>
-        <p>
-          Her kan du eksperimentere med ny teknologi og på egen hånd lære at
-          arbejde med forskelligt udstyr. Du kan låne et stort udvalg af udstyr
-          og få kyndig vejledning i brugen af det.
-        </p>
-        <button class="info__btn">Adgang til Lab</button>
-        <div class="info__logo">
-          <img src="" alt="" />
+
+        <div class="info_index_navigation">
+          <div class="info_index_img">
+            <img src="TSL_logo.png" alt="tech & Story Lab Logo" />
+          </div>
+          <button class="btn__acces_lab">Adgang til lab</button>
         </div>
       </section>
-      <section class="category_list">
-        <h1>Kategorier</h1>
-        <article class="category_list__item1">
-          <h3>Foto, lyd & video</h3>
-          <img src="" alt="" />
-          <button>Læs mere</button>
-        </article>
+      <h1>Kategorier</h1>
 
-        <article class="category_list__item2">
-          <h3>virtuel Reality</h3>
-          <img src="" alt="" />
-          <button>Læs mere</button>
-        </article>
-
-        <article class="category_list__item3">
+      <article class="item">
+        <div class="item__headline">
+          <h3>Foto, Lyd & Video</h3>
+          <div class="btn__category">
+            <button class="cta">Læs mere</button>
+          </div>
+        </div>
+        <div class="category__image">
+          <img
+            class="image_item"
+            src="img_category_index/canon_2200x1400.png"
+            alt="billede af et Canon Camera"
+          />
+        </div>
+      </article>
+      <div class="item__line"></div>
+      <article class="item">
+        <div class="item__headline">
           <h3>Studier</h3>
-          <img src="" alt="" />
-          <button>Læs mere</button>
-        </article>
-
-        <article class="category_list__item4">
-          <h3>Raspbery Pie</h3>
-          <img src="" alt="" />
-          <button>Læs mere</button>
-        </article>
-
-        <article class="category_list__item5">
-          <h3>Adaptere + SD Card</h3>
-          <img src="" alt="" />
-          <button>Læs mere</button>
-        </article>
-
-        <article class="category_list__item6">
+          <div class="btn__category">
+            <button class="cta">Læs mere</button>
+          </div>
+        </div>
+        <div class="category__image">
+          <img
+            class="image_item"
+            src="/case_work_T07/img_category_index/green_screen.png"
+            alt="billede af et Canon Camera"
+          />
+        </div>
+      </article>
+      <div class="item__line"></div>
+      <article class="item">
+        <div class="item__headline">
+          <h3>
+            Adaptere
+            <br />
+            + SD Card
+          </h3>
+          <div class="btn__category">
+            <button class="cta">Læs mere</button>
+          </div>
+        </div>
+        <div class="category__image">
+          <img
+            class="image_item"
+            src="/case_work_T07/img_category_index/adapter.png"
+            alt="billede af et Canon Camera"
+          />
+        </div>
+      </article>
+      <div class="item__line"></div>
+      <article class="item">
+        <div class="item__headline">
+          <h3>Raspberry Pie</h3>
+          <div class="btn__category">
+            <button class="cta">Læs mere</button>
+          </div>
+        </div>
+        <div class="category__image">
+          <img
+            class="image_item"
+            src="/case_work_T07/img_category_index/respary_pie.png"
+            alt="billede af et Canon Camera"
+          />
+        </div>
+      </article>
+      <div class="item__line"></div>
+      <article class="item">
+        <div class="item__headline">
           <h3>Kurser</h3>
-          <img src="" alt="" />
-          <button>Læs mere</button>
+          <div class="btn__category">
+            <button class="cta">Læs mere</button>
+          </div>
+        </div>
+        <div class="category__image">
+          <img
+            class="image_item"
+            src="/case_work_T07/img_category_index/kurser.png"
+            alt="billede af et Canon Camera"
+          />
+        </div>
+      </article>
+      <article class="contact__container">
+        <h1>Kontakt</h1>
+        <div class="contact__images">
+          <article class="contact__1">
+            <img
+              src="foto_kontakt/frederik_lehmann.webp"
+              alt="Lab Ansvarlige frederik Lehmann"
+            />
+          </article>
+          <article class="contact__2">
+            <img
+              src="foto_kontakt/Luca-fusco.webp"
+              alt="Lab Ansvarlige Luca Fusco"
+            />
+          </article>
+
+          <article class="contact__3">
+            <img
+              src="foto_kontakt/simon-benjamin-christensen.webp"
+              alt="Lab Ansvarlige Simon Benjamin Christensen"
+            />
+          </article>
+        </div>
+        <article class="contact__info">
+          <ul class="info__1">
+            <li>Frederick Hansen</li>
+            <li>Lab Ansvarlig</li>
+            <li>+45 12 34 56 78</li>
+          </ul>
+          <ul class="info__2">
+            <li>Luca Fresco</li>
+            <li>Lab Ansvarlig</li>
+            <li>+45 12 34 56 78</li>
+          </ul>
+          <ul class="info__3">
+            <li>Simon Benjamin</li>
+            <li>Lab Ansvarlig</li>
+            <li>+45 12 34 56 78</li>
+          </ul>
         </article>
-      </section>
-      <section class="contact">
-        <div class="contact__info_1">
-          <img src="" alt="" />
-          <p>Frederick Jensen</p>
-          <h5>Lab Ansvarlig</h5>
-          <span>+45 12 34 56 78</span>
-        </div>
-        <div class="contact__info_2">
-          <img src="" alt="" />
-          <p>Luca Freco</p>
-          <h5>Lab Ansvarlig</h5>
-          <span>+45 12 34 56 78</span>
-        </div>
-        <div class="contact__info_3">
-          <img src="" alt="" />
-          <p>Simon Benjamin</p>
-          <h5>Lab Ansvarlig</h5>
-          <!--kan vi måske lave en CSS class til styling af under titler eller bør vi bare beslutte at bruge en h5-6 her?-->
-          <span>+45 12 34 56 78</span>
-        </div>
-      </section>
-      <section class="map">
-        <div class="map_img">
-          <img src="" alt="" />
-        </div>
-        <p>
-          Her er et kort over skolen – din guide til klasseværelser,
-          fællesområder og alt det, du behøver for at finde rundt. Brug det til
-          at navigere, så du altid er på rette vej!
-        </p>
-      </section>
+      </article>
+      <article class="map__container">
+        <img
+          src="img_category_index/kort.png"
+          alt="kort over Københavns Erhvervsarkemi Guldbergsgade 29N "
+        />
+      </article>
     </main>
     <footer></footer>
   </body>
