--- a/produkt_side.html
+++ b/produkt_side.html
@@ -86,6 +86,13 @@
         <img src="produkt_fotos/røde_mikro.webp" alt="Et billede af kamera" />
       </div>
     </div>
+    <div class="newsletter-signup">
+      <p>Tilmeld dig vores nyhedsmail med nyheder, kampagner og meget mere.</p>
+      <form action="#" method="post">
+        <input type="email" placeholder="Din e-mail" required />
+        <button type="submit">Tilmeld</button>
+      </form>
+    </div>
     <script src="produkt_side.js"></script>
   </body>
 </html>
