--- a/produkt_side.html
+++ b/produkt_side.html
@@ -93,6 +93,50 @@
         <button type="submit">Tilmeld</button>
       </form>
     </div>
+    <footer class="footer">
+      <h2>KEA - Københavns Erhvervsakademi</h2>
+      <div class="top_kolon">
+        <p>Guldbergsgade 29N</p>
+        <p>2200 København N</p>
+      </div>
+      <div class="top_2">
+        <h3>Du skal ikke bare vide. Du skal kunne.</h3>
+      </div>
+
+      <div class="kolon_1">
+        <h2>Vejledning</h2>
+        <ul>
+          <li>Studieadministrationen</li>
+          <li>Studie- og Karrierevejledning</li>
+          <li>SPS (specialpædagogisk støtte)</li>
+          <li>SU-vejledning</li>
+          <li>Praktik</li>
+        </ul>
+      </div>
+
+      <div class="kolon_2">
+        <h2>Relevante links</h2>
+        <ul>
+          <li>KEA Webmail</li>
+          <li>KEA Bibliotek</li>
+          <li>Itslearning</li>
+          <li>Fag- og modulkatalog</li>
+          <li>Studieaktivitetsmodel</li>
+          <li>PARIS-aftalen</li>
+          <li>Ordensregler</li>
+        </ul>
+      </div>
+
+      <div class="kolon_3">
+        <h2>Praktisk info</h2>
+        <ul>
+          <li>Cookies og privatliv</li>
+          <li>Persondatapolitik</li>
+          <li>Tilgængelighedserklæring</li>
+          <li>Find vej på KEA</li>
+        </ul>
+      </div>
+    </footer>
     <script src="produkt_side.js"></script>
   </body>
 </html>
