--- a/product_list.html
+++ b/product_list.html
@@ -1,42 +1,101 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="styletile.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styletile.css" />
+    <link rel="stylesheet" href="product_list.css" />
     <title>Produkt Liste</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-<h1>Foto, Lyd & video</h1>
-<div class="info">
-<h2>Info</h2>
-<p>Udstyr reserveres ved henvendelse i Tech & Story Lab. Ved reservation medbring dit personlig studiekort.</p>
-</div>
+      <section class="toppen">
+        <div class="hero-container">
+          <img
+            class="herosection_img"
+            src="produkt_fotos/produktliste_herosection2.webp"
+            alt="herosection"
+          />
+          <img class="logo" src="Logo_Tech&Story.svg" alt="TSL_logo" />
+        </div>
+        <h1 class="produktliste_overskrift2">Foto, Lyd & Video</h1>
+      </section>
 
-<h1>Kameraer</h1>
+      <section class="info">
+        <div>
+          <h2>Info</h2>
+          <p class="info_tekst">
+            Her finder du alt lige fra forskellige kameraer, objektiver og
+            stabilisatorer til diverse tripods, mikrofoner og lysudstyr. Hvad
+            enten du er på udkig efter grej til fx portræt- og produktbilleder,
+            interviews eller podcasts, har vi alt, du har brug for.<br />
+            Udstyr reserveres ved henvendelse i Tech & Story Lab. <br />
+            Ved reservation medbring dit personlig studiekort.
+          </p>
+        </div>
+        <img class="logo2" src="Logo_Tech&Story.svg" alt="TSL_logo" />
+      </section>
 
-<h2>Sony 10d</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ipsa quos officia neque mollitia hic sit pariatur repellendus atque culpa nulla ex, voluptatibus recusandae, excepturi, ipsum beatae. Quisquam, temporibus alias.</p>
-<h3 class="cta">Læs mere</h3>
+      <h1>Kameraer</h1>
 
-    <h1>Lyd</h1>
-    <h2>RØDE Mikrofon</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam inventore aut dolore dolorum quaerat doloremque nobis eveniet incidunt est earum quam suscipit error, quas animi numquam ducimus odio deleniti sunt?</p>
-    <h3 class="cta">Læs mere</h3>
-    
-    <h1>Tilbehør</h1>
-    <h2>RØDE Mikrofon</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam inventore aut dolore dolorum quaerat doloremque nobis eveniet incidunt est earum quam suscipit error, quas animi numquam ducimus odio deleniti sunt?</p>
-    <h3 class="cta">Læs mere</h3>
+      <div id="produkt-liste-container"></div>
 
+      <template id="produkt-skabelon">
+        <article>
+          <div class="produkt_single_grid">
+            <h2 class="produkt-overskrift"></h2>
+            <p class="produkt-beskrivelse"></p>
+            <img
+              class="produktliste_billede"
+              src="produkt_fotos/fujifilm.webp"
+              alt="fujifilm"
+            />
+            <h3 class="cta">Læs mere</h3>
+          </div>
+          <hr class="custom-line" />
+        </article>
+      </template>
     </main>
-    
-</body>
+    <script src="product_list.js"></script>
+
+    <footer class="footer">
+      <h2>KEA - Københavns Erhvervsakademi</h2>
+      <p>Guldbergsgade 29N, 2200 København N</p>
+      <h2>Du skal ikke bare vide. Du skal kunne.</h2>
+
+      <h2>Vejledning</h2>
+      <ul>
+        <li>Studieadministrationen</li>
+        <li>Studie- og Karrierevejledning</li>
+        <li>SPS (specialpædagogisk støtte)</li>
+        <li>SU-vejledning</li>
+        <li>Praktik</li>
+      </ul>
+
+      <h2>Relevante links</h2>
+      <ul>
+        <li>KEA Webmail</li>
+        <li>KEA Bibliotek</li>
+        <li>Itslearning</li>
+        <li>Fag- og modulkatalog</li>
+        <li>Studieaktivitetsmodel</li>
+        <li>PARIS-aftalen</li>
+        <li>Ordensregler</li>
+      </ul>
+
+      <h2>Praktisk info</h2>
+      <ul>
+        <li>Cookies og privatliv</li>
+        <li>Persondatapolitik</li>
+        <li>Tilgængelighedserklæring</li>
+        <li>Find vej på KEA</li>
+      </ul>
+    </footer>
+  </body>
 </html>
