--- a/book_studier.html
+++ b/book_studier.html
@@ -13,20 +13,49 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
 </head>
 
+<header>
+
+      
+    <nav>
+      <ul class="menu">
+        <li>
+          <a href="product_list.html"><b>Kategori</b></a>
+        </li>
+        <li>
+          <a href="book_studier.html"><b>Studier</b></a>
+        </li>
+        <li>
+          <a href="priser.html"><b>Kurser</b></a>
+        </li>
+      </ul>
+      <div class="burger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+      <div class="search">
+        <img src="produkt_fotos/search.webp" alt="Billede af søgemaskine" />
+      </div>
+    </nav>
+  </header>
+
 <body>
     <main>
         <article class="studier">
             <img class="studier__image" src="book_side_fotos/fotostudie.png" alt="foto_studie">
-
+            <img class="logo" src="Logo_Tech&Story.svg" alt="TSL_logo">
             <h1 class="studier__title">Studier</h1>
         </article>
 
         <article class="info">
             <div class="info__grid">
+                <div>
                 <h2 class="info__titel">Info</h2>
                 <p class="info__beskrivelse">Tech & Story Lab har studier du er velkommen til at komme forbi og låne.
                     Studierne kan kun bookes 1 dag adgang. Reserver din tid i Topdesk, og kom forbi Tech & Story Lab og
                     afhent nøglen. </p>
+                </div>
+                    <img class="logo2" src="Logo_Tech&Story.svg" alt="TSL_logo">
             </div>
 
 
