finish index mobil

--- a/index.html
+++ b/index.html
@@ -37,99 +37,119 @@
           Her kan du eksperimentere med ny teknologi og låne et stort udvalg af
           udstyr og få kyndig vejledning i brugen af det.
         </p>
-
         <div class="info_index_navigation">
           <div class="info_index_img">
             <img src="TSL_logo.png" alt="tech & Story Lab Logo" />
           </div>
-          <button class="btn__acces_lab">Adgang til lab</button>
+          <div class="btn__acces">
+            <button class="btn__acces_lab">Adgang til lab</button>
+          </div>
         </div>
       </section>
       <h1>Kategorier</h1>
+      <section class="category__container">
+        <article class="item">
+          <div class="item__headline">
+            <h3>Foto, Lyd & Video</h3>
+            <div class="btn__category">
+              <button class="cta">Læs mere</button>
+            </div>
+          </div>
+          <div class="category__image">
+            <img
+              class="image_item"
+              src="img_category_index/canon_2200x1400.png"
+              alt="billede af et Canon Camera"
+            />
+          </div>
+        </article>
+        <div class="item__line"></div>
+        <article class="item">
+          <div class="item__headline">
+            <h3>Studier</h3>
+            <div class="btn__category">
+              <button class="cta">Læs mere</button>
+            </div>
+          </div>
+          <div class="category__image">
+            <img
+              class="image_item"
+              src="/case_work_T07/img_category_index/green_screen.png"
+              alt="billede af et Canon Camera"
+            />
+          </div>
+        </article>
+        <div class="item__line"></div>
+        <article class="item">
+          <div class="item__headline">
+            <h3>Virtuel Reality</h3>
+            <div class="btn__category">
+              <button class="cta">Læs mere</button>
+            </div>
+          </div>
+          <div class="category__image">
+            <img
+              class="image_item"
+              src="/case_work_T07/img_category_index/green_screen.png"
+              alt="billede af et Canon Camera"
+            />
+          </div>
+        </article>
+        <div class="item__line"></div>
 
-      <article class="item">
-        <div class="item__headline">
-          <h3>Foto, Lyd & Video</h3>
-          <div class="btn__category">
-            <button class="cta">Læs mere</button>
+        <article class="item">
+          <div class="item__headline">
+            <h3>
+              Adaptere
+              <br />
+              + SD Card
+            </h3>
+            <div class="btn__category">
+              <button class="cta">Læs mere</button>
+            </div>
           </div>
-        </div>
-        <div class="category__image">
-          <img
-            class="image_item"
-            src="img_category_index/canon_2200x1400.png"
-            alt="billede af et Canon Camera"
-          />
-        </div>
-      </article>
-      <div class="item__line"></div>
-      <article class="item">
-        <div class="item__headline">
-          <h3>Studier</h3>
-          <div class="btn__category">
-            <button class="cta">Læs mere</button>
+          <div class="category__image">
+            <img
+              class="image_item"
+              src="/case_work_T07/img_category_index/adapter.png"
+              alt="billede af et Canon Camera"
+            />
           </div>
-        </div>
-        <div class="category__image">
-          <img
-            class="image_item"
-            src="/case_work_T07/img_category_index/green_screen.png"
-            alt="billede af et Canon Camera"
-          />
-        </div>
-      </article>
-      <div class="item__line"></div>
-      <article class="item">
-        <div class="item__headline">
-          <h3>
-            Adaptere
-            <br />
-            + SD Card
-          </h3>
-          <div class="btn__category">
-            <button class="cta">Læs mere</button>
+        </article>
+
+        <div class="item__line"></div>
+        <article class="item">
+          <div class="item__headline">
+            <h3>Raspberry Pie</h3>
+            <div class="btn__category">
+              <button class="cta">Læs mere</button>
+            </div>
           </div>
-        </div>
-        <div class="category__image">
-          <img
-            class="image_item"
-            src="/case_work_T07/img_category_index/adapter.png"
-            alt="billede af et Canon Camera"
-          />
-        </div>
-      </article>
-      <div class="item__line"></div>
-      <article class="item">
-        <div class="item__headline">
-          <h3>Raspberry Pie</h3>
-          <div class="btn__category">
-            <button class="cta">Læs mere</button>
+          <div class="category__image">
+            <img
+              class="image_item"
+              src="/case_work_T07/img_category_index/respary_pie.png"
+              alt="billede af et Canon Camera"
+            />
           </div>
-        </div>
-        <div class="category__image">
-          <img
-            class="image_item"
-            src="/case_work_T07/img_category_index/respary_pie.png"
-            alt="billede af et Canon Camera"
-          />
-        </div>
-      </article>
-      <div class="item__line"></div>
-      <article class="item">
-        <div class="item__headline">
-          <h3>Kurser</h3>
-          <div class="btn__category">
-            <button class="cta">Læs mere</button>
+        </article>
+        <div class="item__line"></div>
+        <article class="item">
+          <div class="item__headline">
+            <h3>Kurser</h3>
+            <div class="btn__category">
+              <button class="cta">Læs mere</button>
+            </div>
           </div>
-        </div>
-        <div class="category__image">
-          <img
-            class="image_item"
-            src="/case_work_T07/img_category_index/kurser.png"
-            alt="billede af et Canon Camera"
-          />
-        </div>
-      </article>
+          <div class="category__image">
+            <img
+              class="image_item"
+              src="/case_work_T07/img_category_index/kurser.png"
+              alt="billede af et Canon Camera"
+            />
+          </div>
+        </article>
+      </section>
       <article class="contact__container">
         <h1>Kontakt</h1>
         <div class="contact__images">
