--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </p>
         <div class="info_index_navigation">
           <div class="info_index_img">
-            <img src="TSL_logo.png" alt="tech & Story Lab Logo" />
+            <img src="Logo_Tech&Story.svg" alt="tech & Story Lab Logo" />
           </div>
           <div class="btn__acces">
             <button class="btn__acces_lab">Adgang til lab</button>
