Tilføjet id til js

--- a/produkt_side.html
+++ b/produkt_side.html
@@ -37,7 +37,7 @@
   </header>
   <body>
     <img src="produkt_fotos/Canon .webp" alt="Et billede af et Canon kamera" />
-    <h1>Canon 10</h1>
+    <h1>Produktnavn</h1>
     <div class="info__produkt_side">
       <h2>Info</h2>
       <p>
