--- a/book_studier.html
+++ b/book_studier.html
@@ -14,7 +14,11 @@
 </head>
 
 <header>
-
+    <div class="kea_logo">
+        <a href="index.html">
+        <h1>KEA</h1>
+      </a>
+    </div>
       
     <nav>
       <ul class="menu">
@@ -110,6 +114,14 @@
                 <hr class="linje">
             </div>
         </article>
+
+        <div class="newsletter-signup">
+            <p>Tilmeld dig vores nyhedsmail med nyheder, kampagner og meget mere.</p>
+            <form action="#" method="post">
+              <input type="email" placeholder="Din e-mail" required />
+              <button type="submit">Tilmeld</button>
+            </form>
+          </div>
     </main>
 
     <footer class="footer">
