--- a/product_list.html
+++ b/product_list.html
@@ -12,7 +12,11 @@
 </head>
 <body>
     <header>
-      
+      <div class="kea_logo">
+      <a href="index.html">
+      <h1>KEA</h1>
+    </a>
+  </div>
         <nav>
           <ul class="menu">
             <li>
@@ -73,6 +77,14 @@
                 <hr class="custom-line">
             </article>
         </template>
+
+        <div class="newsletter-signup">
+          <p>Tilmeld dig vores nyhedsmail med nyheder, kampagner og meget mere.</p>
+          <form action="#" method="post">
+            <input type="email" placeholder="Din e-mail" required />
+            <button type="submit">Tilmeld</button>
+          </form>
+        </div>
 
     </main>
     <script src="product_list.js"></script>
