--- a/produkt_side.html
+++ b/produkt_side.html
@@ -8,11 +8,11 @@
     <title>Produkt side</title>
   </head>
   <header>
-    <div class="logo">
+    <div class="kea_logo">
       <a href="index.html">
-        <img src="produkt_fotos/logo.webp" alt="logo" />
-      </a>
-    </div>
+      <h1>KEA</h1>
+    </a>
+  </div>
     <nav>
       <ul class="menu">
         <li>
